--- a/krossvordEN.html
+++ b/krossvordEN.html
@@ -1,136 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Christmas Crossword</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>New Year Crossword</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f0f9ff;
-      text-align: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f6ff;
       padding: 20px;
-      color: #222;
+      text-align: center;
     }
-
     h1 {
-      color: #d42426;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+      color: #c2185b;
     }
-
-    .crossword-container {
-      display: inline-block;
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      margin: 20px auto;
+    .crossword {
+      display: grid;
+      grid-template-columns: repeat(10, 40px);
+      grid-gap: 1px;
+      margin: 0 auto 30px;
+      background-color: #9e9e9e;
+      padding: 4px;
+      width: fit-content;
     }
-
-    .row {
-      display: flex;
-    }
-
     .cell {
-      width: 32px;
-      height: 32px;
-      border: 1px solid #333;
+      width: 40px;
+      height: 40px;
+      background-color: white;
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: bold;
-      font-size: 16px;
-      background: #fff;
+      font-size: 18px;
+      color: #333;
     }
-
-    .cell.black {
-      background: #333;
+    .black {
+      background-color: #333;
     }
-
-    .words-list {
+    .clues {
       max-width: 600px;
-      margin: 25px auto;
-      font-size: 16px;
-      line-height: 1.6;
+      margin: 0 auto;
+      text-align: left;
     }
-
-    .words-list h2 {
-      color: #2c5aa0;
+    .clue {
+      margin: 8px 0;
     }
-
-    .word-item {
-      margin: 4px 0;
+    .number {
+      font-weight: bold;
+      color: #c2185b;
+      margin-right: 6px;
+    }
+    h2 {
+      color: #6a1b9a;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>🎄 Christmas Crossword Puzzle</h1>
+  <h1>🎄 New Year Crossword Puzzle 🎄</h1>
 
-  <div class="crossword-container" id="crossword"></div>
-
-  <div class="words-list">
-    <h2>Words to find:</h2>
-    <div class="word-item">1. <strong>tree</strong> — Holiday symbol</div>
-    <div class="word-item">2. <strong>gift</strong> — Present under the tree</div>
-    <div class="word-item">3. <strong>christmas</strong> — December 25th celebration</div>
-    <div class="word-item">4. <strong>tinsel</strong> — Shiny decoration</div>
-    <div class="word-item">5. <strong>candle</strong> — Light for the season</div>
+  <!-- Crossword Grid (10x10) -->
+  <div class="crossword">
+    <!-- Row 1 -->
+    <div class="cell">S</div><div class="cell">A</div><div class="cell">N</div><div class="cell">T</div><div class="cell">A</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
+    <!-- Row 2 -->
+    <div class="cell">O</div><div class="cell black"></div><div class="cell">N</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
+    <!-- Row 3 -->
+    <div class="cell">C</div><div class="cell">O</div><div class="cell">C</div><div class="cell">K</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
+    <!-- Row 4 -->
+    <div class="cell">K</div><div class="cell black"></div><div class="cell">N</div><div class="cell black"></div><div class="cell black"></div><div class="cell">C</div><div class="cell">A</div><div class="cell">N</div><div class="cell">D</div><div class="cell">Y</div>
+    <!-- Row 5 -->
+    <div class="cell black"></div><div class="cell black"></div><div class="cell">W</div><div class="cell black"></div><div class="cell">F</div><div class="cell">I</div><div class="cell">R</div><div class="cell">E</div><div class="cell">W</div><div class="cell">O</div>
+    <!-- Row 6 -->
+    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">I</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">R</div>
+    <!-- Row 7 -->
+    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">R</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">K</div>
+    <!-- Row 8 -->
+    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">E</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">S</div>
+    <!-- Row 9 -->
+    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">W</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
+    <!-- Row 10 -->
+    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">O</div><div class="cell">R</div><div class="cell">K</div><div class="cell">S</div><div class="cell black"></div><div class="cell black"></div>
   </div>
 
-  <script>
-    // Размер сетки: 11 колонок × 10 строк
-    const cols = 11;
-    const rows = 10;
-    let grid = Array(rows).fill(null).map(() => Array(cols).fill(''));
+  <div class="clues">
+    <h2>Across:</h2>
+    <div class="clue"><span class="number">1.</span> Jolly man in red who brings gifts (5 letters)</div>
+    <div class="clue"><span class="number">3.</span> Holiday garment often hung by the fireplace (4 letters)</div>
+    <div class="clue"><span class="number">6.</span> Sweet sugary treat popular during holidays (5 letters)</div>
+    <div class="clue"><span class="number">7.</span> Colorful explosions in the sky on New Year's Eve (9 letters)</div>
 
-    // Слова и их расположение (x, y, направление: 'h' или 'v')
-    const words = [
-      { word: "TREE",       x: 4, y: 0, dir: 'v' },      // по вертикали
-      { word: "GIFT",       x: 4, y: 0, dir: 'h' },      // по горизонтали — пересекается с TREE в 'T'
-      { word: "CHRISTMAS",  x: 0, y: 2, dir: 'h' },      // по горизонтали
-      { word: "TINSEL",     x: 2, y: 4, dir: 'v' },      // по вертикали
-      { word: "CANDLE",     x: 5, y: 4, dir: 'v' }       // по вертикали
-    ];
+    <h2>Down:</h2>
+    <div class="clue"><span class="number">2.</span> White flakes that fall in winter (4 letters)</div>
+  </div>
 
-    // Заполняем сетку буквами
-    words.forEach(w => {
-      const letters = w.word.split('');
-      if (w.dir === 'h') {
-        for (let i = 0; i < letters.length; i++) {
-          if (w.y < rows && w.x + i < cols) {
-            if (grid[w.y][w.x + i] === '') {
-              grid[w.y][w.x + i] = letters[i];
-            }
-          }
-        }
-      } else if (w.dir === 'v') {
-        for (let i = 0; i < letters.length; i++) {
-          if (w.y + i < rows && w.x < cols) {
-            if (grid[w.y + i][w.x] === '') {
-              grid[w.y + i][w.x] = letters[i];
-            }
-          }
-        }
-      }
-    });
-
-    // Формируем HTML
-    const container = document.getElementById('crossword');
-    for (let y = 0; y < rows; y++) {
-      const rowDiv = document.createElement('div');
-      rowDiv.className = 'row';
-      for (let x = 0; x < cols; x++) {
-        const cell = document.createElement('div');
-        if (grid[y][x] === '') {
-          cell.className = 'cell black';
-        } else {
-          cell.className = 'cell';
-          cell.textContent = grid[y][x];
-        }
-        rowDiv.appendChild(cell);
-      }
-      container.appendChild(rowDiv);
-    }
-  </script>
 </body>
 </html>
