--- a/krossvordEN.html
+++ b/krossvordEN.html
@@ -1,98 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>New Year Crossword</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f6ff;
-      padding: 20px;
+      background: linear-gradient(to bottom, #e3f2fd, #f5f5f5);
       text-align: center;
+      padding: 20px;
+      color: #1a237e;
     }
     h1 {
-      color: #c2185b;
+      color: #c62828;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .crossword-container {
+      display: inline-block;
+      margin: 20px auto;
+      background: white;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
     .crossword {
-      display: grid;
-      grid-template-columns: repeat(10, 40px);
-      grid-gap: 1px;
-      margin: 0 auto 30px;
-      background-color: #9e9e9e;
-      padding: 4px;
-      width: fit-content;
+      border-collapse: collapse;
     }
-    .cell {
-      width: 40px;
-      height: 40px;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .crossword td {
+      width: 34px;
+      height: 34px;
+      border: 1px solid #283593;
+      text-align: center;
+      vertical-align: middle;
       font-weight: bold;
-      font-size: 18px;
-      color: #333;
+      font-size: 14px;
+      background-color: #fff;
+      color: #0d47a1;
     }
     .black {
-      background-color: #333;
+      background-color: #1a237e;
     }
-    .clues {
-      max-width: 600px;
-      margin: 0 auto;
+    .legend {
+      max-width: 650px;
+      margin: 25px auto;
+      padding: 16px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       text-align: left;
     }
-    .clue {
-      margin: 8px 0;
+    .legend h2 {
+      color: #0d47a1;
+      margin-top: 0;
     }
-    .number {
-      font-weight: bold;
-      color: #c2185b;
-      margin-right: 6px;
+    .legend ul {
+      padding-left: 20px;
     }
-    h2 {
-      color: #6a1b9a;
-      margin-top: 30px;
+    .legend li {
+      margin-bottom: 6px;
+    }
+    .note {
+      font-style: italic;
+      color: #555;
+      margin-top: 15px;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
-  <h1>🎄 New Year Crossword Puzzle 🎄</h1>
+  <h1>🎄 New Year Crossword 🎄</h1>
 
-  <!-- Crossword Grid (10x10) -->
-  <div class="crossword">
-    <!-- Row 1 -->
-    <div class="cell">S</div><div class="cell">A</div><div class="cell">N</div><div class="cell">T</div><div class="cell">A</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
-    <!-- Row 2 -->
-    <div class="cell">O</div><div class="cell black"></div><div class="cell">N</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
-    <!-- Row 3 -->
-    <div class="cell">C</div><div class="cell">O</div><div class="cell">C</div><div class="cell">K</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
-    <!-- Row 4 -->
-    <div class="cell">K</div><div class="cell black"></div><div class="cell">N</div><div class="cell black"></div><div class="cell black"></div><div class="cell">C</div><div class="cell">A</div><div class="cell">N</div><div class="cell">D</div><div class="cell">Y</div>
-    <!-- Row 5 -->
-    <div class="cell black"></div><div class="cell black"></div><div class="cell">W</div><div class="cell black"></div><div class="cell">F</div><div class="cell">I</div><div class="cell">R</div><div class="cell">E</div><div class="cell">W</div><div class="cell">O</div>
-    <!-- Row 6 -->
-    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">I</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">R</div>
-    <!-- Row 7 -->
-    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">R</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">K</div>
-    <!-- Row 8 -->
-    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">E</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">S</div>
-    <!-- Row 9 -->
-    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">W</div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div>
-    <!-- Row 10 -->
-    <div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell black"></div><div class="cell">O</div><div class="cell">R</div><div class="cell">K</div><div class="cell">S</div><div class="cell black"></div><div class="cell black"></div>
+  <!-- Crossword grid: 13x13 -->
+  <div class="crossword-container">
+    <table class="crossword">
+      <tr>
+        <td class="black"></td><td>C</td><td>H</td><td>R</td><td>I</td><td>S</td><td>T</td><td>M</td><td>A</td><td>S</td><td>T</td><td>R</td><td>E</td>
+      </tr>
+      <tr>
+        <td>S</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>E</td>
+      </tr>
+      <tr>
+        <td>N</td><td class="black"></td><td class="black"></td><td class="black"></td><td>O</td><td>L</td><td>I</td><td>V</td><td>I</td><td>E</td><td>R</td><td>S</td><td>A</td>
+      </tr>
+      <tr>
+        <td>O</td><td class="black"></td><td>F</td><td>R</td><td>O</td><td>S</td><td>T</td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td>L</td>
+      </tr>
+      <tr>
+        <td>W</td><td class="black"></td><td>L</td><td></td><td></td><td></td><td></td><td class="black"></td><td>C</td><td>H</td><td>A</td><td>M</td><td>A</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>S</td><td>A</td><td>N</td><td>D</td><td>M</td><td>A</td><td>N</td><td></td><td></td><td></td><td></td><td>G</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>N</td><td></td><td></td><td></td><td></td><td></td><td></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td>N</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>E</td><td class="black"></td><td class="black"></td><td>S</td><td>T</td><td>A</td><td>R</td><td class="black"></td><td>O</td><td>R</td><td>N</td><td>E</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>G</td><td class="black"></td><td class="black"></td><td>N</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>M</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>U</td><td class="black"></td><td>S</td><td>O</td><td>W</td><td>F</td><td>L</td><td>A</td><td>K</td><td>E</td><td class="black"></td><td>E</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>R</td><td class="black"></td><td>N</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="black"></td><td>N</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>O</td><td class="black"></td><td>E</td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td>T</td>
+      </tr>
+      <tr>
+        <td class="black"></td><td>C</td><td class="black"></td><td>K</td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td><td class="black"></td>
+      </tr>
+    </table>
   </div>
 
-  <div class="clues">
-    <h2>Across:</h2>
-    <div class="clue"><span class="number">1.</span> Jolly man in red who brings gifts (5 letters)</div>
-    <div class="clue"><span class="number">3.</span> Holiday garment often hung by the fireplace (4 letters)</div>
-    <div class="clue"><span class="number">6.</span> Sweet sugary treat popular during holidays (5 letters)</div>
-    <div class="clue"><span class="number">7.</span> Colorful explosions in the sky on New Year's Eve (9 letters)</div>
-
-    <h2>Down:</h2>
-    <div class="clue"><span class="number">2.</span> White flakes that fall in winter (4 letters)</div>
+  <div class="legend">
+    <h2>Clues</h2>
+    <ul>
+      <li><strong>Across:</strong>
+        <ol>
+          <li>CHRISTMASTREE — festive evergreen decorated with lights and ornaments</li>
+          <li>OLIVIERSALAD — traditional Russian New Year dish</li>
+          <li>FROST — icy crystals that form on cold surfaces</li>
+          <li>SNOWMAN — figure built from snow, often with a carrot nose</li>
+          <li>STAR — shining celestial body; also tops the Christmas tree</li>
+          <li>ORNAMENT — decorative item hung on a Christmas tree</li>
+          <li>SNOWFLAKE — unique ice crystal that falls from the sky</li>
+        </ol>
+      </li>
+      <li><strong>Down:</strong>
+        <ol>
+          <li>SNOW — white frozen precipitation</li>
+          <li>CHAMPAGNE — sparkling wine often popped at midnight</li>
+          <li>SNEGUROCHKA — the Snow Maiden, granddaughter of Ded Moroz</li>
+        </ol>
+      </li>
+    </ul>
+    <p class="note">Note: Multi-word answers are written without spaces (e.g., "CHRISTMASTREE").</p>
   </div>
-
 </body>
 </html>
