--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>Моя презентация</title>
     </head>
-    <body>
+    <a href="krossvordRU.html">Русский кроссворд</a>
  
 <p>
   Нажмите, чтобы скачать или открыть презентацию:
