--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   <a href="index.html">Файл проверки работы с кириллицей .html</a>
 </p>
 
-    </body>
+    <a href="krossvordEN.html">Английский кроссворд</a>>
   </html>
