--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title>Мой блог</title>
     </head>
     <body>
-     
+     <a href="https://www.flaticon.com/ru/free-icons/2026" title="2026 иконки">2026 иконки от Freepik - Flaticon</a>
     </body>
   </html>
