--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -5,6 +5,14 @@
     <title>Заголовок страницы</title>
 </head>
 <body>
-    <!-- Содержимое страницы -->
+    <p>
+    Приближается один из любимых праздников в России — Новый год. Улицы городов украшаются разноцветными гирляндами, витрины магазинов наполняются сияющими огоньками, а дома превращаются в уютные уголки волшебства. Этот праздник дарит ощущение чуда, надежды и тепла, собирая за праздничным столом семьи и друзей.
+    </p>
+    <p>
+        В преддверии Нового года особенно популярны разные интеллектуальные развлечения для всей семьи. Многие с удовольствием разгадывают русский кроссворд, вспоминая ёлочные традиции, новогодние фильмы и блюда праздничного стола. Такие задания не только весело провести время, но и освежить в памяти интересные факты о празднике.
+    </p>
+    <p>
+        Не менее интересно попробовать свои силы и в английском кроссворде, где вместо «Дед Мороз» может встретиться «Santa Claus», а вместо «мандарин» — «tangerine». Это отличный способ совместить праздничное настроение с полезной практикой иностранного языка, особенно для школьников и студентов.
+    </p>
 </body>
 </html>
