--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <h2> 6.12 , 2025</h2>
-Icons/test.html<img src=“Icons/.png” alt=“Новый год”>
+Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 <h2> 15 октября , 2025</h2>
 <p>
