--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -11,7 +11,7 @@
     <p>
         В преддверии Нового года особенно популярны разные интеллектуальные развлечения для всей семьи. Многие с удовольствием разгадывают русский кроссворд, вспоминая ёлочные традиции, новогодние фильмы и блюда праздничного стола. Такие задания не только весело провести время, но и освежить в памяти интересные факты о празднике.
     </p>
-    <p>
+    <p class=”quote”>
         Не менее интересно попробовать свои силы и в английском кроссворде, где вместо «Дед Мороз» может встретиться «Santa Claus», а вместо «мандарин» — «tangerine». Это отличный способ совместить праздничное настроение с полезной практикой иностранного языка, особенно для школьников и студентов.
     </p>
 </body>
