--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
 Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
 </p>
       </h2>
-     
+     <a href="tel:+1234567890">Call us</a>
+      <a href="tel:+1234567890">Call us</a>
     </body>
   </html>
