--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
       <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+  <p><em>Блог создан: 13 января 2026 г.</em></p>
+    <p>Доменное имя <strong>adeptmushroom github io .</strong></p>
+  <p>
+    <p><strong><a href="mailto:anashkina.dm@gmail.com">✉️ Напишите мне</a></strong></p>
+  </p>
+      
       <h2> 6.12 , 2025</h2>
 Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
