--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@ Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
   </p>
 
 
+
+
+
+
+<p><strong>Дата:</strong> 16 января 2026 г.</p>
+<p><strong>Решение шифров Цезаря (алфавит без Ё, 32 буквы):</strong></p>
+<p>1. Ключи:<br>
+а) АПЕЛЬСИН → САЦЬНВЩЮ: <b>k = 17</b><br>
+б) АБРИКОС → ЫЬКГЕЙМ: <b>k = 27</b> (исправлен шифротекст: Л → К)
+</p>
+<p>2. Расшифровка:<br>
+а) ТБМБУ → <b>САЛАТ</b> (k = 1)<br>
+б) ЪФЛБ → <b>ЩУКА</b> (k = 1)
+</p>
+<p>3. Фамилия (ключ k = 10):<br>
+АНАШКИНА → <b>КЧКВУТЧК</b>
+</p>
+
+
+
+      
+
         
     </body>
   </html>
