--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
 <p><strong>Решение шифров Цезаря (алфавит без Ё, 32 буквы):</strong></p>
 <p>1. Ключи:<br>
 а) АПЕЛЬСИН → САЦЬНВЩЮ: <b>k = 17</b><br>
-б) АБРИКОС → ЫЬКГЕЙМ: <b>k = 27</b> (исправлен шифротекст: Л → К)
+б) АБРИКОС → ЫЬКГЕЙМ: <b>k = 27</b>
 </p>
 <p>2. Расшифровка:<br>
 а) ТБМБУ → <b>САЛАТ</b> (k = 1)<br>
@@ -66,7 +66,6 @@ Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
 <p>3. Фамилия (ключ k = 10):<br>
 АНАШКИНА → <b>КЧКВУТЧК</b>
 </p>
-
 
 
       
