--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@ Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
 
 
 
+
       <p><strong>Дата:</strong> 16 января 2026 г.</p>
-<p><strong>Алфавит 33 буквы:</strong> анализ→грголк (k=3)</p>
-<p><strong>Ключи:</strong> а) k=17; б) k=28 (исправлено)</p>
-<p><strong>Расшифровка:</strong> а) ФХНЗКЧ→СОКРОВ (k=3); б) ЦЩЕБ→ЩУКА (k=2)</p>
-<p><strong>АНАШКИНА (k=10):</strong> КЧКВФТЧК</p>
+<p>Шифр Цезаря: анализ → грголк (сдвиг k=3)</p>
+<p>Ключи: а) АПЕЛЬСИН→САЦЬНВЩЮ: k=17; б) АБРИКОС→ЫЬЛГЕЙМ: k=28</p>
+<p>Расшифровка: а) ФХНЗКЧ→СОКРОВ (k=3); б) ЦЩЕБФ→ЩУКА (k=25)</p>
+<p>АНАШКИНА (k=10): КЧКВФТЧК</p>
+<p>Алфавит: 33 буквы с ё (а-я, ё после е)</p>
 
       
 
