--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
       <title>Мой блог</title>
       <link type=“text/css” rel=“stylesheet” href=“style.css” />
     </head>
+
+
+
+
+<body style="background: #f4f1de; color: #3d405b;">
+
+
+
+
+
+
+    
     <body>
       
 
