--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-blockquote.q { color: #D4AF37; border-left: 4px solid #8B0000; font-style: italic; }
+<body style="background: #e0f7fa; color: #0288d1;">
 
 
 
