--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
   <html lang="ru">
     <head>
       <title>Мой блог</title>
+
+
+
+
+<link type=“text/css” rel=“stylesheet” href=“style.css” />
+
+
+
+
+      
       <link type=“text/css” rel=“stylesheet” href=“style.css” />
     </head>
 
 
 
 
-<body style="background: #e0f7fa; color: #0288d1;">
+
 
 
 
