--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 
 
-         <h2> 6.12 , 2025</h2>
-Icons/test.html<img src=“Icons/balloons.png” alt=“Новый год”>
+         <h2> 5 декабря , 2025</h2>
+<img src=“Icons/balloons.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 
 
