--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
          <h2> 5 декабря , 2025</h2>
-<img src=“Icons/balloons.png” alt=“Новый год”>
+<img src="Icons/balloons.png" alt="Новый год">
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 
 
