--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 
 
 
-
-
+<p><strong>Дата:</strong> 20 января 2026 г.</p>
+# RSA example: p=5,q=7 → n=35,φ=24, e=5,d=5. Public key (35,5), Private key (35,5)
+# Encrypt m=2: C=2^5 mod 35 = 32
+# Decrypt C=32: M=32^5 mod 35 = 2
 
 
     
