--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 
 <p><strong>Дата:</strong> 20 января 2026 г.</p>
-      <p>Открытый ключ: (55, 3) им можно расшифровать </p>
-      <p>Закрытый ключ: (55, 27)им можно зашифровать </p>
+      <p>Открытый ключ: (55, 3) им можно зашифровать </p>
+      <p>Закрытый ключ: (55, 27)им можно расшифровать </p>
 
     </body>
     
