--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-<p><strong>Дата:</strong> 16 января 2026 г.</p>
+<h2> 16 января , 2026</h2>
 <p>Ключи: а) АПЕЛЬСИН→САЦЬНВЩЮ: k=18; б) АБРИКОС→ЫЬЛГЕЙМ: k=27</p>
 <p>Расшифровка: а) ФХНЗКЧ→ПРИВЕТ (k=5); б) ЦЩЕБФ→ВЕСНА (k=20)</p>
 <p>АНАШКИНА (k=10): КЧКВФТЧК</p>
@@ -68,10 +68,16 @@
 
 
 
-<p><strong>Дата:</strong> 20 января 2026 г.</p>
+
+      <h2> 20 января , 2026</h2>
       <p>Открытый ключ: (55, 3) им можно зашифровать </p>
       <p>Закрытый ключ: (55, 27) им можно расшифровать </p>
 
+
+
+
+
+      
     </body>
     
   </html>
