--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       
       
-<h2> 15 октября , 2025</h2>
+<h2> 15 октября , 2025 </h2>
 <p>
 Я сделала Новогодние кроссворды для сайта <a href=“http://mariavolkova1111.github.io/dem.github.io/”  title=“Блог моего друга”Сайт моего друга</a>
 </p>
@@ -40,7 +40,8 @@
 
 
 
-<h2> 5 декабря , 2025</h2>
+
+      <h2> 5 декабря , 2025 </h2>
 <img src="Icons/balloons.png" alt="Новый год">
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 
@@ -48,7 +49,8 @@
 
 
 
-      <p> 13 января 2026 г.</p>
+
+    <h2> 13 января , 2026</h2>
     <p>Доменное имя <strong>adeptmushroom github io .</strong></p>
   <p>
     <p><strong><a href="mailto:anashkina.dm@gmail.com">Напишите мне</a></strong></p>
