--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
 <h2> 15 октября , 2025 </h2>
 <p>
-Я сделала Новогодние кроссворды для сайта <a href=“http://mariavolkova1111.github.io/dem.github.io/”  title=“Блог моего друга”Сайт моего друга</a>
+Я сделала Новогодние кроссворды для сайта <a href="http://mariavolkova1111.github.io/dem.github.io/"  title="Блог моего друга"Сайт моего друга</a>
 </p>
 
 
@@ -43,7 +43,7 @@
 
       <h2> 5 декабря , 2025 </h2>
 <img src="Icons/balloons.png" alt="Новый год">
-Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html"> здесь.</a>
 
 
 
